y.output
Terminals unused in grammar

    TOKEN_ERROR


State 15 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: list_decl

    2 list_decl: list_decl var_decl
    3          | list_decl function_decl
    4          | %empty

    5 list_commands: list_commands ';' command
    6              | command

    7 command: assingment
    8        | command_escreva
    9        | block_decl
   10        | command_senaum
   11        | command_enquanto
   12        | command_return
   13        | %empty

   14 assingment: TK_IDENTIFIER '=' expression
   15           | TK_IDENTIFIER '[' expression ']' '=' expression

   16 command_escreva: KW_ESCREVA list_expression

   17 command_senaum: KW_ENTAUM command KW_SE '(' expression ')'
   18               | KW_ENTAUM command KW_SENAUM command KW_SE '(' expression ')'

   19 command_enquanto: command KW_ENQUANTO '(' expression ')'

   20 command_return: KW_RETORNE expression

   21 var_decl: type_key_word TK_IDENTIFIER '=' expression ';'
   22         | type_key_word TK_IDENTIFIER '[' expression ']' list_expression ';'

   23 function_decl: type_key_word TK_IDENTIFIER '(' ident_list ')' block_decl

   24 block_decl: '{' list_commands '}'

   25 list_expression: list_expression expression
   26                | %empty

   27 expression: type_literal
   28           | TK_IDENTIFIER
   29           | KW_ENTRADA
   30           | TK_IDENTIFIER '(' list_expression ')'
   31           | TK_IDENTIFIER '[' expression ']'
   32           | '(' expression ')'
   33           | expression '+' expression
   34           | expression '-' expression
   35           | expression '*' expression
   36           | expression '/' expression
   37           | expression '>' expression
   38           | expression OPERATOR_GE expression
   39           | expression '<' expression
   40           | expression OPERATOR_LE expression
   41           | expression OPERATOR_DIF expression
   42           | expression OPERATOR_EQ expression
   43           | expression '&' expression
   44           | expression '|' expression
   45           | '~' expression

   46 type_key_word: KW_CARA
   47              | KW_INTE
   48              | KW_REAL

   49 type_literal: LIT_CHAR
   50             | LIT_FLOAT
   51             | LIT_INTEIRO
   52             | LIT_STRING

   53 ident_list: ident_list type_key_word TK_IDENTIFIER
   54           | %empty


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 43
    '(' (40) 17 18 19 23 30 32
    ')' (41) 17 18 19 23 30 32
    '*' (42) 35
    '+' (43) 33
    '-' (45) 34
    '/' (47) 36
    ';' (59) 5 21 22
    '<' (60) 39
    '=' (61) 14 15 21
    '>' (62) 37
    '[' (91) 15 22 31
    ']' (93) 15 22 31
    '{' (123) 24
    '|' (124) 44
    '}' (125) 24
    '~' (126) 45
    error (256)
    KW_CARA (258) 46
    KW_INTE (259) 47
    KW_REAL (260) 48
    KW_SE (261) 17 18
    KW_ENTAUM (262) 17 18
    KW_SENAUM (263) 18
    KW_ENQUANTO (264) 19
    KW_ENTRADA (265) 29
    KW_ESCREVA (266) 16
    KW_RETORNE (267) 20
    OPERATOR_LE (268) 40
    OPERATOR_GE (269) 38
    OPERATOR_EQ (270) 42
    OPERATOR_DIF (271) 41
    TK_IDENTIFIER <symbol> (272) 14 15 21 22 23 28 30 31 53
    LIT_INTEIRO <symbol> (273) 51
    LIT_FLOAT <symbol> (274) 50
    LIT_CHAR <symbol> (275) 49
    LIT_STRING <symbol> (276) 52
    TOKEN_ERROR (277)


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    program <ast> (41)
        on left: 1
        on right: 0
    list_decl <ast> (42)
        on left: 2 3 4
        on right: 1 2 3
    list_commands (43)
        on left: 5 6
        on right: 5 24
    command (44)
        on left: 7 8 9 10 11 12 13
        on right: 5 6 17 18 19
    assingment (45)
        on left: 14 15
        on right: 7
    command_escreva (46)
        on left: 16
        on right: 8
    command_senaum (47)
        on left: 17 18
        on right: 10
    command_enquanto (48)
        on left: 19
        on right: 11
    command_return (49)
        on left: 20
        on right: 12
    var_decl <ast> (50)
        on left: 21 22
        on right: 2
    function_decl <ast> (51)
        on left: 23
        on right: 3
    block_decl (52)
        on left: 24
        on right: 9 23
    list_expression <ast> (53)
        on left: 25 26
        on right: 16 22 25 30
    expression <ast> (54)
        on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 14 15 17 18 19 20 21 22 25 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
    type_key_word <type> (55)
        on left: 46 47 48
        on right: 21 22 23 53
    type_literal <symbol> (56)
        on left: 49 50 51 52
        on right: 27
    ident_list <ast> (57)
        on left: 53 54
        on right: 23 53


State 0

    0 $accept: . program $end

    $default  reduce using rule 4 (list_decl)

    program    go to state 1
    list_decl  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: list_decl .
    2 list_decl: list_decl . var_decl
    3          | list_decl . function_decl

    KW_CARA  shift, and go to state 4
    KW_INTE  shift, and go to state 5
    KW_REAL  shift, and go to state 6

    $default  reduce using rule 1 (program)

    var_decl       go to state 7
    function_decl  go to state 8
    type_key_word  go to state 9


State 3

    0 $accept: program $end .

    $default  accept


State 4

   46 type_key_word: KW_CARA .

    $default  reduce using rule 46 (type_key_word)


State 5

   47 type_key_word: KW_INTE .

    $default  reduce using rule 47 (type_key_word)


State 6

   48 type_key_word: KW_REAL .

    $default  reduce using rule 48 (type_key_word)


State 7

    2 list_decl: list_decl var_decl .

    $default  reduce using rule 2 (list_decl)


State 8

    3 list_decl: list_decl function_decl .

    $default  reduce using rule 3 (list_decl)


State 9

   21 var_decl: type_key_word . TK_IDENTIFIER '=' expression ';'
   22         | type_key_word . TK_IDENTIFIER '[' expression ']' list_expression ';'
   23 function_decl: type_key_word . TK_IDENTIFIER '(' ident_list ')' block_decl

    TK_IDENTIFIER  shift, and go to state 10


State 10

   21 var_decl: type_key_word TK_IDENTIFIER . '=' expression ';'
   22         | type_key_word TK_IDENTIFIER . '[' expression ']' list_expression ';'
   23 function_decl: type_key_word TK_IDENTIFIER . '(' ident_list ')' block_decl

    '='  shift, and go to state 11
    '['  shift, and go to state 12
    '('  shift, and go to state 13


State 11

   21 var_decl: type_key_word TK_IDENTIFIER '=' . expression ';'

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 22
    type_literal  go to state 23


State 12

   22 var_decl: type_key_word TK_IDENTIFIER '[' . expression ']' list_expression ';'

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 24
    type_literal  go to state 23


State 13

   23 function_decl: type_key_word TK_IDENTIFIER '(' . ident_list ')' block_decl

    $default  reduce using rule 54 (ident_list)

    ident_list  go to state 25


State 14

   29 expression: KW_ENTRADA .

    $default  reduce using rule 29 (expression)


State 15

   28 expression: TK_IDENTIFIER .
   30           | TK_IDENTIFIER . '(' list_expression ')'
   31           | TK_IDENTIFIER . '[' expression ']'

    '['  shift, and go to state 26
    '('  shift, and go to state 27

    '('       [reduce using rule 28 (expression)]
    $default  reduce using rule 28 (expression)


State 16

   51 type_literal: LIT_INTEIRO .

    $default  reduce using rule 51 (type_literal)


State 17

   50 type_literal: LIT_FLOAT .

    $default  reduce using rule 50 (type_literal)


State 18

   49 type_literal: LIT_CHAR .

    $default  reduce using rule 49 (type_literal)


State 19

   52 type_literal: LIT_STRING .

    $default  reduce using rule 52 (type_literal)


State 20

   45 expression: '~' . expression

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 28
    type_literal  go to state 23


State 21

   32 expression: '(' . expression ')'

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 29
    type_literal  go to state 23


State 22

   21 var_decl: type_key_word TK_IDENTIFIER '=' expression . ';'
   33 expression: expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '>' expression
   38           | expression . OPERATOR_GE expression
   39           | expression . '<' expression
   40           | expression . OPERATOR_LE expression
   41           | expression . OPERATOR_DIF expression
   42           | expression . OPERATOR_EQ expression
   43           | expression . '&' expression
   44           | expression . '|' expression

    OPERATOR_LE   shift, and go to state 30
    OPERATOR_GE   shift, and go to state 31
    OPERATOR_EQ   shift, and go to state 32
    OPERATOR_DIF  shift, and go to state 33
    '+'           shift, and go to state 34
    '-'           shift, and go to state 35
    '*'           shift, and go to state 36
    '/'           shift, and go to state 37
    '&'           shift, and go to state 38
    '|'           shift, and go to state 39
    '<'           shift, and go to state 40
    '>'           shift, and go to state 41
    ';'           shift, and go to state 42


State 23

   27 expression: type_literal .

    $default  reduce using rule 27 (expression)


State 24

   22 var_decl: type_key_word TK_IDENTIFIER '[' expression . ']' list_expression ';'
   33 expression: expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '>' expression
   38           | expression . OPERATOR_GE expression
   39           | expression . '<' expression
   40           | expression . OPERATOR_LE expression
   41           | expression . OPERATOR_DIF expression
   42           | expression . OPERATOR_EQ expression
   43           | expression . '&' expression
   44           | expression . '|' expression

    OPERATOR_LE   shift, and go to state 30
    OPERATOR_GE   shift, and go to state 31
    OPERATOR_EQ   shift, and go to state 32
    OPERATOR_DIF  shift, and go to state 33
    '+'           shift, and go to state 34
    '-'           shift, and go to state 35
    '*'           shift, and go to state 36
    '/'           shift, and go to state 37
    '&'           shift, and go to state 38
    '|'           shift, and go to state 39
    '<'           shift, and go to state 40
    '>'           shift, and go to state 41
    ']'           shift, and go to state 43


State 25

   23 function_decl: type_key_word TK_IDENTIFIER '(' ident_list . ')' block_decl
   53 ident_list: ident_list . type_key_word TK_IDENTIFIER

    KW_CARA  shift, and go to state 4
    KW_INTE  shift, and go to state 5
    KW_REAL  shift, and go to state 6
    ')'      shift, and go to state 44

    type_key_word  go to state 45


State 26

   31 expression: TK_IDENTIFIER '[' . expression ']'

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 46
    type_literal  go to state 23


State 27

   30 expression: TK_IDENTIFIER '(' . list_expression ')'

    $default  reduce using rule 26 (list_expression)

    list_expression  go to state 47


State 28

   33 expression: expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '>' expression
   38           | expression . OPERATOR_GE expression
   39           | expression . '<' expression
   40           | expression . OPERATOR_LE expression
   41           | expression . OPERATOR_DIF expression
   42           | expression . OPERATOR_EQ expression
   43           | expression . '&' expression
   44           | expression . '|' expression
   45           | '~' expression .

    OPERATOR_LE   shift, and go to state 30
    OPERATOR_GE   shift, and go to state 31
    OPERATOR_EQ   shift, and go to state 32
    OPERATOR_DIF  shift, and go to state 33
    '<'           shift, and go to state 40
    '>'           shift, and go to state 41

    $default  reduce using rule 45 (expression)


State 29

   32 expression: '(' expression . ')'
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '>' expression
   38           | expression . OPERATOR_GE expression
   39           | expression . '<' expression
   40           | expression . OPERATOR_LE expression
   41           | expression . OPERATOR_DIF expression
   42           | expression . OPERATOR_EQ expression
   43           | expression . '&' expression
   44           | expression . '|' expression

    OPERATOR_LE   shift, and go to state 30
    OPERATOR_GE   shift, and go to state 31
    OPERATOR_EQ   shift, and go to state 32
    OPERATOR_DIF  shift, and go to state 33
    '+'           shift, and go to state 34
    '-'           shift, and go to state 35
    '*'           shift, and go to state 36
    '/'           shift, and go to state 37
    '&'           shift, and go to state 38
    '|'           shift, and go to state 39
    '<'           shift, and go to state 40
    '>'           shift, and go to state 41
    ')'           shift, and go to state 48


State 30

   40 expression: expression OPERATOR_LE . expression

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 49
    type_literal  go to state 23


State 31

   38 expression: expression OPERATOR_GE . expression

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 50
    type_literal  go to state 23


State 32

   42 expression: expression OPERATOR_EQ . expression

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 51
    type_literal  go to state 23


State 33

   41 expression: expression OPERATOR_DIF . expression

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 52
    type_literal  go to state 23


State 34

   33 expression: expression '+' . expression

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 53
    type_literal  go to state 23


State 35

   34 expression: expression '-' . expression

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 54
    type_literal  go to state 23


State 36

   35 expression: expression '*' . expression

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 55
    type_literal  go to state 23


State 37

   36 expression: expression '/' . expression

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 56
    type_literal  go to state 23


State 38

   43 expression: expression '&' . expression

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 57
    type_literal  go to state 23


State 39

   44 expression: expression '|' . expression

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 58
    type_literal  go to state 23


State 40

   39 expression: expression '<' . expression

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 59
    type_literal  go to state 23


State 41

   37 expression: expression '>' . expression

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21

    expression    go to state 60
    type_literal  go to state 23


State 42

   21 var_decl: type_key_word TK_IDENTIFIER '=' expression ';' .

    $default  reduce using rule 21 (var_decl)


State 43

   22 var_decl: type_key_word TK_IDENTIFIER '[' expression ']' . list_expression ';'

    $default  reduce using rule 26 (list_expression)

    list_expression  go to state 61


State 44

   23 function_decl: type_key_word TK_IDENTIFIER '(' ident_list ')' . block_decl

    '{'  shift, and go to state 62

    block_decl  go to state 63


State 45

   53 ident_list: ident_list type_key_word . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 64


State 46

   31 expression: TK_IDENTIFIER '[' expression . ']'
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '>' expression
   38           | expression . OPERATOR_GE expression
   39           | expression . '<' expression
   40           | expression . OPERATOR_LE expression
   41           | expression . OPERATOR_DIF expression
   42           | expression . OPERATOR_EQ expression
   43           | expression . '&' expression
   44           | expression . '|' expression

    OPERATOR_LE   shift, and go to state 30
    OPERATOR_GE   shift, and go to state 31
    OPERATOR_EQ   shift, and go to state 32
    OPERATOR_DIF  shift, and go to state 33
    '+'           shift, and go to state 34
    '-'           shift, and go to state 35
    '*'           shift, and go to state 36
    '/'           shift, and go to state 37
    '&'           shift, and go to state 38
    '|'           shift, and go to state 39
    '<'           shift, and go to state 40
    '>'           shift, and go to state 41
    ']'           shift, and go to state 65


State 47

   25 list_expression: list_expression . expression
   30 expression: TK_IDENTIFIER '(' list_expression . ')'

    KW_ENTRADA     shift, and go to state 14
    TK_IDENTIFIER  shift, and go to state 15
    LIT_INTEIRO    shift, and go to state 16
    LIT_FLOAT      shift, and go to state 17
    LIT_CHAR       shift, and go to state 18
    LIT_STRING     shift, and go to state 19
    '~'            shift, and go to state 20
    '('            shift, and go to state 21
    ')'            shift, and go to state 66

    expression    go to state 67
    type_literal  go to state 23


State 48

   32 expression: '(' expression ')' .

    $default  reduce using rule 32 (expression)


State 49

   33 expression: expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '>' expression
   38           | expression . OPERATOR_GE expression
   39           | expression . '<' expression
   40           | expression . OPERATOR_LE expression
   40           | expression OPERATOR_LE expression .
   41           | expression . OPERATOR_DIF expression
   42           | expression . OPERATOR_EQ expression
   43           | expression . '&' expression
   44           | expression . '|' expression

    $default  reduce using rule 40 (expression)


State 50

   33 expression: expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '>' expression
   38           | expression . OPERATOR_GE expression
   38           | expression OPERATOR_GE expression .
   39           | expression . '<' expression
   40           | expression . OPERATOR_LE expression
   41           | expression . OPERATOR_DIF expression
   42           | expression . OPERATOR_EQ expression
   43           | expression . '&' expression
   44           | expression . '|' expression

    $default  reduce using rule 38 (expression)


State 51

   33 expression: expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '>' expression
   38           | expression . OPERATOR_GE expression
   39           | expression . '<' expression
   40           | expression . OPERATOR_LE expression
   41           | expression . OPERATOR_DIF expression
   42           | expression . OPERATOR_EQ expression
   42           | expression OPERATOR_EQ expression .
   43           | expression . '&' expression
   44           | expression . '|' expression

    $default  reduce using rule 42 (expression)


State 52

   33 expression: expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '>' expression
   38           | expression . OPERATOR_GE expression
   39           | expression . '<' expression
   40           | expression . OPERATOR_LE expression
   41           | expression . OPERATOR_DIF expression
   41           | expression OPERATOR_DIF expression .
   42           | expression . OPERATOR_EQ expression
   43           | expression . '&' expression
   44           | expression . '|' expression

    $default  reduce using rule 41 (expression)


State 53

   33 expression: expression . '+' expression
   33           | expression '+' expression .
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '>' expression
   38           | expression . OPERATOR_GE expression
   39           | expression . '<' expression
   40           | expression . OPERATOR_LE expression
   41           | expression . OPERATOR_DIF expression
   42           | expression . OPERATOR_EQ expression
   43           | expression . '&' expression
   44           | expression . '|' expression

    OPERATOR_LE   shift, and go to state 30
    OPERATOR_GE   shift, and go to state 31
    OPERATOR_EQ   shift, and go to state 32
    OPERATOR_DIF  shift, and go to state 33
    '*'           shift, and go to state 36
    '/'           shift, and go to state 37
    '&'           shift, and go to state 38
    '|'           shift, and go to state 39
    '<'           shift, and go to state 40
    '>'           shift, and go to state 41

    $default  reduce using rule 33 (expression)


State 54

   33 expression: expression . '+' expression
   34           | expression . '-' expression
   34           | expression '-' expression .
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | expression . '>' expression
   38           | expression . OPERATOR_GE expression
   39           | expression . '<' expression
   40           | expression . OPERATOR_LE expression
   41           | expression . OPERATOR_DIF expression
   42           | expression . OPERATOR_EQ expression
   43           | expression . '&' expression
   44           | expression . '|' expression

    OPERATOR_LE   shift, and go to state 30
    OPERATOR_GE   shift, and go to state 31
    OPERATOR_EQ   shift, and go to state 32
    OPERATOR_DIF  shift, and go to state 33
    '*'           shift, and go to state 36
    '/'           shift, and go to state 37
    '&'           shift, and go to state 38
    '|'           shift, and go to state 39
    '<'           shift, and go to state 40
    '>'           shift, and go to state 41

    $default  reduce using rule 34 (expression)


State 55
